--- a/doc/GDit.tex
+++ b/doc/GDit.tex
@@ -2,8 +2,12 @@
 
 \usepackage{graphicx}
 \usepackage{mathtools}
+\usepackage{amsmath}
+
+\DeclareMathOperator{\arctanh}{arctanh}
 
 \newcommand{\Teff}{\mathrm{T_{eff}}}
+\newcommand{\twTeff}{\mathrm{\tilde{T}_{eff}}}
 
 \begin{document}
 
@@ -18,11 +22,10 @@ at the stellar surface is proportional to the local surface gravity and,
 thus, a rotating star appears both hotter and brighter at the poles than
 at the equator. This document describes a method to derive gravity
 darkening corrections that can be applied to stellar evolution models;
-these adjust the intrinsic model $\Teff$ , surface gravity, and luminosity
+these adjust the intrinsic model effective temperature , surface gravity, and luminosity
 in order to account for the effects of surface rotation as well as the
 angle between the stellar rotation axis and the line of sight. I provide
-a simple, fast Python implementation to apply these corrections to stellar
-evolution models.
+a Python implementation to apply these corrections to stellar evolution models.
 \end{abstract}
 
 
@@ -31,23 +34,24 @@ The gravity darkening model is derived by Espinosa Lara \& Rieutord (2011,
 A\&A, 533, 43; hereafter ELR). ELR assume the radiative flux is directed
 antiparallel to the effective surface gravity. The effective surface gravity
 is not uniform in a rotating star and, thus, neither is the flux. Since the
-scalar flux (F) is related to $\Teff$ by the Stefan-Boltzmann law, the same
+scalar flux (F) is related to the effective temperature ($\Teff$) by the
+Stefan-Boltzmann law, the same
 argument applies to both F and $\Teff$. The ELR model reduces to a differential
 equation characterized by two variables: the polar angle $\theta$ and the ratio
 of surface angular velocity to the Keplerian angular velocity (ELR eq.\ 10):
 \begin{equation}
-  \omega = \Omega \sqrt{ \frac{R_e}{GM} } = \frac{\Omega}{\Omega_K}
+  \omega = \frac{\Omega}{\Omega_K} = \Omega \sqrt{ \frac{R_e}{GM} }
 \end{equation}
 where $\Omega$ is the surface angular velocity (radians per second,
-assumed uniform), $R_e$ is the equatorial radius of the star, $G$ is Newton’s
-gravitational constant, and $M$ is stellar mass. $\Omega_K$ is the Keplerian
-angular velocity. %Note that $\omega$ is provided by \texttt{MESA} as \texttt{surf\_avg\_omega\_div\_omega\_crit}.
+assumed uniform), $\Omega_K$ is the Keplerian angular velocity,
+$R_e$ is the equatorial radius of the star, $G$ is Newton's gravitational constant,
+and $M$ is stellar mass. 
 
 The ELR model is valid for $0 \leq \theta \leq \pi/2$; all other values of
 $\theta$ are mapped into this interval via symmetry arguments. The model
 requires a numerical solution, except at the extrema $\theta = 0$ (ELR eq.\ 27)
 and $\pi/2$ (ELR eq.\ 28) for which analytical solutions are provided. The
-numerical solution boils down to finding the value of $\tilde{r}=r/R_e$ that
+numerical solution boils down to finding the value of $\tilde{r}=R/R_e$ that
 satisfies (ELR eq.\ 30)
 \begin{equation}
   \frac{1}{\omega^2 \tilde{r}} + \frac{1}{2} \tilde{r}^2 \sin^2 \theta = \frac{1}{\omega^2} + \frac{1}{2}
@@ -56,39 +60,43 @@ for given $\omega$ and $\theta$. The values of $\tilde{r}$, $\theta$, and $\omeg
 \begin{equation}
   \cos \vartheta + \ln \tan(\vartheta/2) = \frac{1}{3} \omega^2 \tilde{r}^3 \cos^3 \theta + \cos \theta + \ln \tan(\theta/2)
 \end{equation}
-These are straightforward to solve with a root-find and, at this point one can calculate the scaled flux and $\Teff$ via ELR eq.\ 31.
+These are straightforward to solve with a root-find and, at this point one can calculate the normalized temperature variable
+\begin{math}
+  \twTeff = \Teff \left( \frac{L}{4 \pi \sigma R_e^2} \right)^{-1/4}
+\end{math} via ELR eq.\ 31.
 
 \begin{figure}
-  \includegraphics[width=0.9\textwidth]{../plots/R_and_T.pdf}
-  \caption{\emph{Left:} The ratio of the stellar radius to the equatorial radius ($\tilde{r}=R/R_e$) as a function of the polar angle $\theta$ for different values of $\omega$. \emph{Right:} Similar to the left panel but now showing the scaled $\tilde{\Teff}$ variable of ELR, see text for details.\label{fig:ELR}}
+  \centering
+  \includegraphics[width=0.99\textwidth]{../plots/R_and_T.pdf}
+  \caption{\emph{Left:} The ratio of the stellar radius to the equatorial radius ($\tilde{r}=R/R_e$) as a function of the polar angle $\theta$ for different values of $\omega$. \emph{Right:} Similar to the left panel but now showing $\twTeff$, see text for details.\label{fig:ELR}}
 \end{figure}
 
 Figure \ref{fig:ELR} shows the solution of the ELR model as a function of
 $\theta$ for different values of $\omega$. Figure \ref{fig:ELR} indicates
-that the polar radius varies from $R_p = R_e$ ($\omega=0$) to $R_p = (2/3) R_e$
-($\omega=\pi/2$).
-
+that the polar radius reaches a minimum value of $R_p = (2/3) R_e$ at $\omega=\pi/2$.
+$\twTeff$ is included in the right panel of Figure \ref{fig:ELR}. When
+$\omega=0$, the idealized star is spherical and, thus, $R_p = R_e$ and $\twTeff = \Teff$ for all $\theta$.
 
 \section{Oblate spheroids and projection effects}
-Now that we have a solution for the scaled flux ($\tilde{F}$) we can
+Now that we have a solution for the ELR model we can begin to
 compute the projected luminosity along the line of sight (LOS). The surface is
 an oblate spheroid so we work in oblate spheroidal coordinates. The coordinate
 system is defined by three variables: polar angle $\nu$, azimuthal angle
-$\phi$, and $\mu$ = $arctanh( R_p /R_e )$. It is important to distinguish
+$\phi$, and $\mu$ = $\arctanh( R_p /R_e )$. It is important to distinguish
 between $\nu$ in the oblate spheroidal coordinate system and the polar angle
 $\theta$ in the ELR model: $\nu = 0$ at the equator; $\nu = \pi/2$ at the pole
 and, thus, $\theta = \pi/2 - \nu$.
 
 With the oblate spheroidal coordinate system thus defined, and properly
 connected to the ELR model, we can now integrate over the stellar surface
-$\Sigma$. However, the quantity that we want is that projected along the line
-of sight (LOS) and for that we need to define one additional angle $i$ and the
+($\Sigma$). However, the quantity that we want is that projected along the line
+of sight (LOS) and for that we need to define one additional angle, $i$, and the
 LOS unit vector $\hat{l}$. $i$ is chosen such that $i = 0$ at the equator.
 The projected surface is denoted by $\Sigma_{proj}$.
 
-A useful analytical formula to calculate $\Sigma_{proj}$ is given by
-Binngeli~(1980). Note that Brandt \& Huang (2015) use a different formula,
-which is only (trivially) correct at $i = 0$ and $\pi/2$. The Brandt \& Huang
+A useful analytical formula to calculate $\Sigma_{proj}$ for any orientation is given by
+Binggeli~(1980, A\&A, 82, 289). Note that Brandt \& Huang (2015, ApJ, 807, 58) use a different formula,
+which is only correct at $i = 0$ and $\pi/2$. Compared to Binggeli's formula, the Brandt \& Huang
 formula leads to a maximum error of $\sim8\%$ in $\Sigma_{proj}$ at $i = \pi/4$.
 
 To calculate the luminosity projected along the LOS $L_{proj}$ requires the
@@ -101,6 +109,17 @@ where only the flux projected toward the observer, i.e., $d\vec{\Sigma} \cdot \h
 \Teff_{proj} = \left( \frac{L_{proj}}{\sigma \Sigma_{proj}} \right)^{1/4}
 \end{equation}
 where $\sigma$ is the Stefan-Boltzmann constant.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=0.9\textwidth]{../plots/C_L.pdf}
+  
+  \includegraphics[width=0.9\textwidth]{../plots/C_T.pdf}
+  
+  \caption{The range of $C_L$ (upper panel) and $C_T$ (lower panel). Note the
+    color scale is different in the two panels. \label{fig:coeff}}
+\end{figure}
+
 
 The following is based closely on what is done in the SYCLIST code
 (Georgy et al.\ 2014, A\&A, 566, 21). The double integral (4) is, essentially, a
@@ -124,16 +143,6 @@ and
 C_T = \left( \frac{C_L \Sigma}{4 \Sigma_{proj}} \right)^{1/4}
 \end{equation}
 
-\begin{figure}
-  \centering
-  \includegraphics[width=0.9\textwidth]{../plots/C_L.pdf}
-  
-  \includegraphics[width=0.9\textwidth]{../plots/C_T.pdf}
-  
-  \caption{The range of $C_L$ (upper panel) and $C_T$ (lower panel). Note the
-    color scale is different in the two panels. \label{fig:coeff}}
-\end{figure}
-
 Figure \ref{fig:coeff} shows how the values of $C_T$ and $C_L$ vary over the
 $omega$,$i$-plane. These can be compared with the upper panels of Figure XXX
 in Georgy et al.\ (2014). The variation in $C_L$ is greater than that of $C_T$
@@ -149,9 +158,19 @@ and to compute the geometric coefficients $C_L$ and $C_T$ for arbitrary $\omega$
 also includes a Python interface to interpolate $C_L$ and $C_T$ coefficients from a $50\times50$ grid
 stored in a data file.  Separate interpolants are provided for $C_L$ and $C_T$ to enable the application
 of gravity darkening corrections to stellar evolution models. As an example, Figure \ref{fig:HRD} shows
-a MIST isochrone (Choi et al.\ 2016, ApJ, 823, 102) with $\omega=0.4$ (at the ZAMS). The figure shows the
-intrinsic model quantities as well as the gravity-darkened values at $i=0$ (``edge-on'') and $i=90^{\circ}$
-(``face-on'').
+a MIST isochrone (Choi et al.\ 2016, ApJ, 823, 102) with $\omega=0.4$ (at the ZAMS). The left panel shows
+the intrinsic $\Teff$ and luminosity as well as the gravity-darkened values for $i=0$ and $i=90^{\circ}$.
+The right panel shows how $\omega$ evolves along the isochrone from the initial value of $\omega=0.4$ set
+at the ZAMS. The most dramatic differences in the H-R diagram occur when $\omega$ is large. $\omega$ is
+provided in MIST as \texttt{surf\_avg\_omega\_div\_omega\_crit}.
 
+\begin{figure}
+  \includegraphics[width=0.9\textwidth]{../plots/iso.pdf}
+  \caption{MIST isochrone with [Fe/H]=0, log(age[yr])=7.5, and $\omega=0.4$ at the ZAMS.
+    \emph{Left:} The H-R diagram showing the effect of changing the inclination angle $i$ from
+    $0^{\circ}$ (in the plane of equator) to $90^{\circ}$ (aligned with the rotation axis). \emph{Right:}
+    The variation in $\omega$ with luminosity to explain why the gravity darkening correction
+    is larger or smaller at a given point on the isochrone in the H-R diagram. \label{fig:HRD}}
+\end{figure}
 
 \end{document}
